[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/map1.png" type="Texture" id=2]
[ext_resource path="res://sprites/fundo-transparente-png.png" type="Texture" id=3]
[ext_resource path="res://scripts/Principal.gd" type="Script" id=4]
[ext_resource path="res://sprites/png-transparent-brazil-blank-map-brazil-theme-blue-world-map.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.0666667, 0.368627, 0.0588235, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="Principal" type="Node2D"]
script = ExtResource( 4 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 579.735, 312.728 )
scale = Vector2( 0.63422, 0.449296 )
z_index = -2
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="BG"]
visible = false
position = Vector2( 4.9104, 15.9134 )
scale = Vector2( 1.18757, 1.02998 )
z_index = -3
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = 2.0
margin_right = 1020.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nós precisamos ir para cidade localizado na ponto (4,9): Clique na cidade correta"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 11.0
margin_top = 267.0
margin_right = 271.0
margin_bottom = 497.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resposta:"
align = 3
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoCerto" type="TouchScreenButton" parent="."]
position = Vector2( 532.622, 54.8368 )
scale = Vector2( 0.132758, 0.109352 )
normal = ExtResource( 3 )

[node name="BotaoErrado" type="TouchScreenButton" parent="."]
position = Vector2( 393.865, 145.648 )
scale = Vector2( 0.120866, 0.114109 )
normal = ExtResource( 3 )

[node name="BotaoErrado2" type="TouchScreenButton" parent="."]
position = Vector2( 496.187, 246.162 )
scale = Vector2( 0.361086, 0.118866 )
normal = ExtResource( 3 )

[node name="BotaoErrado3" type="TouchScreenButton" parent="."]
position = Vector2( 843.867, 289.405 )
scale = Vector2( 0.199354, 0.116487 )
normal = ExtResource( 3 )

[node name="BotaoErrado4" type="TouchScreenButton" parent="."]
position = Vector2( 790.732, 387.351 )
scale = Vector2( 0.180327, 0.12838 )
normal = ExtResource( 3 )

[node name="BotaoErrado5" type="TouchScreenButton" parent="."]
position = Vector2( 802.572, 301.676 )
scale = Vector2( 0.170813, 0.0831898 )
normal = ExtResource( 3 )

[node name="BotaoErrado6" type="TouchScreenButton" parent="."]
position = Vector2( 299.676, 387.54 )
scale = Vector2( 0.168434, 0.102217 )
normal = ExtResource( 3 )

[node name="Continuar" type="Button" parent="."]
visible = false
margin_left = 58.0
margin_top = 464.0
margin_right = 148.0
margin_bottom = 484.0
text = "CONTINUAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 38.1838, 387.495 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 14.1299
margin_top = -30.799
margin_right = 217.13
margin_bottom = 28.201
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<- VOCE ESTÁ EM (7,6)"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 767.153, 225.072 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 6 )

[connection signal="pressed" from="BotaoCerto" to="." method="_on_BotaoCerto_pressed"]
[connection signal="pressed" from="BotaoErrado" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="BotaoErrado2" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="BotaoErrado3" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="BotaoErrado4" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="BotaoErrado5" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="BotaoErrado6" to="." method="_on_BotaoErrado_pressed"]
[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]
